legendre polynomials evaluation

--- a/monte-carlo/legendre-polynomials/Makefile
+++ b/monte-carlo/legendre-polynomials/Makefile
@@ -1,12 +1,12 @@
 default: legendre
 
 legendre: test.c liblegendre.a
-	clang $^ -o $@ 
+	clang $^ -o $@ -lm
 
 #legendre: legendre_polynomial_prb.c liblegendre.a
-#	clang $^ -o $@
+	#clang $^ -o $@ -lm
 
-liblegendre.a: legendre_polynomial.o
+liblegendre.a: legendre_polynomial.o 
 	ar -rcv $@ $^
 
  
