--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 .pyc
 amazon_services/ClassicalTrajectories.pem
+monte-carlo/fortran_notebook/odepack/
+monte-carlo/fortran_notebook/odepack/
+monte-carlo/fortran_notebook/odepack/
+
+
