new wrapper for eigen procedure

--- a/sympy-and-stuff/eigen/test2/Makefile
+++ b/sympy-and-stuff/eigen/test2/Makefile
@@ -2,5 +2,4 @@ CCXX = g++
 CXXFLAGS = -I /usr/local/include/eigen3/ -std=c++11
 
 test: hamiltonian.cpp
-	$(CCXX) -o $@ $^ $(CXXFLAGS)
-
+	$(CCXX) -O3 -march=native -mtune=native -funroll-loops -o $@ $^ $(CXXFLAGS)
