--- a/learning-stuff/python-fft/Makefile
+++ b/learning-stuff/python-fft/Makefile
@@ -1,5 +1,8 @@
 CCXX = g++
-CXXFLAGS = -I -std=c++0x 
+CXXFLAGS = -std=c++11 -lfftw3 -lm
 
 dft: dft.cpp
 	$(CCXX) $(CXXFLAGS) dft.cpp -o $@
+
+fft-test: fft-test.cpp
+	$(CCXX) $(CXXFLAGS) $^ -o $@
